# packages/credential-showcase-openapi/openapi/openapi.yaml
@@ -2512,6 +2512,7 @@ components:
         issuanceFlow:
             $ref: '#/components/schemas/IssuanceFlow'
     IssuanceFlow:
+      type: object
       allOf:
         - $ref: '#/components/schemas/Workflow'
         - type: object
@@ -2522,6 +2523,7 @@ components:
               $ref: '#/components/schemas/Issuer'
       description: Workflow specialization for credential issuance
     IssuanceFlowRequest:
+      type: object
       allOf:
         - $ref: '#/components/schemas/WorkflowRequest'
         - type: object
@@ -2534,12 +2536,19 @@ components:
       description: Workflow specialization for credential issuance
 
     PresentationFlowsResponse:
+      type: object
       properties:
         presentationFlows:
           type: array
           items:
             $ref: '#/components/schemas/PresentationFlow'
+    PresentationFlowResponse:
+      type: object
+      properties:
+        presentationFlow:
+          $ref: '#/components/schemas/PresentationFlow'
     PresentationFlow:
+      type: object
       allOf:
         - $ref: '#/components/schemas/Workflow'
         - type: object
